--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -58,6 +58,12 @@ $transitionTime: 0.12s;
   border-bottom: 1px solid rgba(230, 230, 230, 1);
 }
 
+// .search-container {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+// }
+
 .top-nav2 {
   max-width: 100%;
   height: 50px;
