--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -128,6 +128,7 @@ $transitionTime: 0.12s;
   position: fixed;
   left: 41%;
   bottom: 1%;
+  border: 2px solid chartreuse;
 
   &:focus,
   &:hover,
@@ -587,4 +588,9 @@ span {
   font-size: 1.6rem;
   text-align: center;
   margin-top: 15px;
+}
+
+.search-results img {
+  height: 200px;
+  width: 100%;
 }
